// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/21/2010
	r272 [Rytech]
	*Server now ignores the rune knight ID's that between the MECHANIC_T2 and BABY_RUNE jobs.
	-Removed the exp fix as its not needed.

03/21/2010
	r271 [pakpil]
	* Updated to eA revision 14267.

	r270 [pakpil]
	* Fixed an issue when reading exp table.
	
	r269 [pakpil]
	* Added max_baby_third_paramater to set max parameter to 3rd baby classes.
	* Fixed an issue where the cart was being taked off when you are removing your mado.
	* Minor fix in pc_setoption to prevent 3rd baby class to mount until these can do it.

03/20/2010
	r268 [Rytech]
	*Added in the adjusted checks for the V2.0 job system.
	-This should be the final revision for the adding of the updated system.
	-A big thanks for pakpil for this one.

03/20/2010
	r267 [Jobbie]
	* Fixed an issue of recent skills in eA that using skill_blockpc_start

	r266 [pakpil]
	* Fixed GC_WEAPONBLOCKING that wasn't consuming SP while active.
	* Fixed some damage formulas.

	r265 [pakpil]
	* Fixed an issue that was crashing server. Bug report 281.

	r264 [Rytech]
	*Added the remaining parts of the system update.
	-All thats left is to update the few checks in the map server.

03/20/2010
	r263 [Rytech]
	*This is part 1 of a big major update.
	-WARNING!!!! For the next few revisions following this one, the program will be uncompileable due to many checks needing to be redone
	-because of the add in of this update. Update to this revision ONLY if your intrested at looking at the code.

	*Added in the V2.0 3CeAM job system.
	-This system will give better support for many things and also fix and improve on many of the problems weve had in the past.
	-Another update will follow soon to add in some other needed info for the charactor server.
	-This adds support for the 3rd class baby jobs. You can freely test them, but their skills will not appear in the client normally.