@@ -530,7 +530,7 @@ extern int duel_count;
 #define pc_check_weapontype(sd, type) ((type)&((sd)->status.weapon < MAX_WEAPON_TYPE? \
 	1<<(sd)->status.weapon:(1<<(sd)->weapontype1)|(1<<(sd)->weapontype2)))
 //Checks if the given class value corresponds to a player class. [Skotlex]
-#define pcdb_checkid(class_) (class_ < JOB_MAX_BASIC || (class_ >= JOB_NOVICE_HIGH && class_ <= JOB_DARK_COLLECTOR) || (class_ >= JOB_RUNE_KNIGHT && class_ < JOB_MECHANIC_T2) || (class_ >= JOB_BABY_RUNE && class_ < JOB_MAX))
+#define pcdb_checkid(class_) (class_ < JOB_MAX_BASIC || (class_ >= JOB_NOVICE_HIGH && class_ <= JOB_DARK_COLLECTOR) || (class_ >= JOB_RUNE_KNIGHT && class_ <= JOB_MECHANIC_T2) || (class_ >= JOB_BABY_RUNE && class_ < JOB_MAX))
 
 int pc_class2idx(int class_);
 int pc_isGM(struct map_session_data *sd);
